...
    private func setupTableView() {
        
        // Setup table view
        self.tableView.delegate = self
        self.tableView.dataSource = self
        self.tableView.backgroundColor = .clear
        self.tableView.accessibilityIdentifier = "CurrencyTableView"
        
        // Register cell
        CurrencyPickerTableViewCell.register(in: self.tableView)
    }
    
    /**
...
        self.searchBar.delegate = self
        self.searchBar.backgroundColor = .white
        self.searchBar.searchTextField.backgroundColor = .white
        self.searchBar.searchTextField.textColor = .black
        self.searchBar.searchTextField.becomeFirstResponder()
        self.searchBar.placeholder = NSLocalizedString("currencyPickerViewController.searchBar.placeholder", comment: "")
        self.searchBar.searchTextField.accessibilityIdentifier = "CurrencySearchBar"
    }
    
    // MARK: - Keyboard Notifications
    
    /**
     Register this view controller to receive keyboard notifications
...
